src/pages/leaderboard-page/leaderboard-page.css
* {
  margin: 0;
  padding: 0;
  font-family: Arial, Helvetica, sans-serif;
}

.hero{
  width: 100vw;
  height: 50vh;
  background-color: #2563EB;
    
  border-bottom-left-radius: 10%;
  border-bottom-right-radius: 10%;

  position: relative;
  z-index: 1;
}

@media (max-width: 480px) or (max-height: 400px) {
  .hero {
    height: 35vh;
  }
}

@media (max-width: 768px) and (min-width: 481px) {
  .hero {
    height: 40vh;
  }
}
.leaderboard-container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: calc(100vh - 50vh - 80px);
  padding: 2rem;
  position: relative;
  z-index: 2;
}

#leaderboard-list {
  width: 100%;
  background-color: #9b9b9b;
  border: medium black solid;
  border-radius: 2%;
  list-style: none;
  padding: 0;
  max-width: 1300px;
  max-height: 70vh; 
  overflow-y: auto;
}

.leaderboard-item {
  display: grid;
  grid-template-columns: 5fr 5fr 1fr;
  gap: 1rem;
  background: #f5f5f5;
  padding: 1rem;
  margin-bottom: 0.5rem;
  border-radius: 8px;
}

footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: #2563EB;
  border-top-right-radius: 10%;
  border-top-left-radius: 10%;
  color: white;
  text-align: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
  z-index: 3;
}

.mp-link {
  text-decoration: none;
  color:#f5f5f5;
  font-weight: bold;
}
.mp-link:hover {
  color: black;
}

